@@ -36,9 +36,13 @@ public:
   typedef element_type subscript_type;
   typedef const_value_type const_subscript_type;
 
+
+  /// @copydoc details::generic_sequence::generic_sequence
   inline unbounded_basic_string_sequence()
     : impl_()
   {}
+
+
   inline explicit unbounded_basic_string_sequence(CORBA::ULong maximum)
     : impl_(maximum)
   {}
@@ -54,25 +58,32 @@ public:
   inline CORBA::ULong maximum() const {
     return impl_.maximum();
   }
+  /// @copydoc details::generic_sequence::release
   inline CORBA::Boolean release() const {
     return impl_.release();
   }
+  /// @copydoc details::generic_sequence::length
   inline CORBA::ULong length() const {
     return impl_.length();
   }
 
+  /// @copydoc details::generic_sequence::length
   inline void length(CORBA::ULong length) {
     impl_.length(length);
   }
+  /// @copydoc details::generic_sequence::operator[]
   inline const_value_type operator[](CORBA::ULong i) const {
     return impl_[i];
   }
+  /// @copydoc details::generic_sequence::operator[]
   inline element_type operator[](CORBA::ULong i) {
     return element_type(impl_[i], release());
   }
+  /// @copydoc details::generic_sequence::get_buffer
   inline const_value_type const * get_buffer() const {
     return impl_.get_buffer();
   }
+  /// @copydoc details::generic_sequence::replace
   inline void replace(
       CORBA::ULong maximum,
       CORBA::ULong length,
@@ -80,6 +91,7 @@ public:
       CORBA::Boolean release = false) {
     impl_.replace(maximum, length, data, release);
   }
+  /// @copydoc details::generic_sequence::get_buffer(CORBA::Boolean)
   inline value_type * get_buffer(CORBA::Boolean orphan = false) {
     return impl_.get_buffer(orphan);
   }
