@@ -1,3 +1,11 @@
+Tue Nov 28 09:32:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/Bounded_Basic_String_Sequence_T.h:
+          Fixed doxygen errors
+
+        * tao/Unbounded_Basic_String_Sequence_T.h:
+          Improved doxygen documentation
+
 Mon Nov 27 21:03:53 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:
